Add Hailo support (#1056) (#1058)

--- a/package.json
+++ b/package.json
@@ -100,8 +100,10 @@
             { "ext": "dlc",         "name": "DLC Model"                },
             { "ext": "dnn",         "name": "CNTK Model"               },
             { "ext": "h5",          "name": "Keras Model"              },
+            { "ext": "har",         "name": "Hailo Model"              },
             { "ext": "hd5",         "name": "Keras Model"              },
             { "ext": "hdf5",        "name": "Keras Model"              },
+            { "ext": "hn",          "name": "Hailo Model"              },
             { "ext": "keras",       "name": "Keras Model"              },
             { "ext": "kmodel",      "name": "Kendryte Model"           },
             { "ext": "lite",        "name": "TensorFlow Lite Model"    },
